# news_agent

./: .gitignore  404.html  mkdocs.yml  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml
config/: newspapers.yml
configuration/: index.html
docs/: index.md
docs/configuration/: index.md
docs/news_fetcher/: index.md
news_fetcher/: index.html
site/: index.html  objects.inv  sitemap.xml
site/news_fetcher/: index.html
site/search/: search_index.json
src/: agent.py  config.py  mail.py  main.py  news_fetcher.py
src/agents/: selector_agent.py
src/news/: ara.py  diarisabadell.py  elpais.py  news_fetcher.py  news_filter.py  utils.py
src/prompts/: make_summary.py
