[project]
name = "news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "feedparser>=6.0.12",
    "markdown>=3.9",
    "openai>=1.109.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-material>=9.6.22",
    "mkdocs-section-index>=0.3.10",
    "mkdocstrings[python]>=0.30.1",
    "pytest>=8.4.2",
    "ruff>=0.13.2",
]
